--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": true,
     "declaration": true,
-    "declarationMap": true
+    "emitDeclarationOnly": true,
+    "declarationMap": true,
+    "noEmit": false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"],
