--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,10 +3,11 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": true,
     "declaration": true,
-    "declarationMap": true
+    "emitDeclarationOnly": true,
+    "declarationMap": true,
+    "noEmit": false
   },
-  "include": ["src/**/*.ts", "src/component/index.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
