--- a/examples/simple-deep-research/package.json
+++ b/examples/simple-deep-research/package.json
@@ -13,15 +13,11 @@
     "@astack/integrations": "workspace:*",
     "cheerio": "^1.0.0-rc.12",
     "mustache": "^4.2.0",
-    "openai": "^4.28.0",
     "playwright": "^1.52.0",
-    "selenium-webdriver": "^4.32.0",
-    "tsx": "^4.7.0",
-    "webdriver-manager": "^12.1.9"
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
     "@types/mustache": "^4.2.6",
-    "@types/selenium-webdriver": "^4.1.28",
     "glob": "^11.0.2"
   }
 }
