--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -14,6 +14,14 @@
       },
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./model-provider": {
+      "types": {
+        "import": "./dist/model-provider/index.d.ts",
+        "require": "./dist/model-provider/index.d.cts"
+      },
+      "import": "./dist/model-provider/index.js",
+      "require": "./dist/model-provider/index.cjs"
     }
   },
   "files": [
