--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
       "@astack/core": ["packages/core/src"],
       "@astack/core/*": ["packages/core/src/*"],
       "@astack/components": ["packages/components/src"],
-      "@astack/components/*": ["packages/components/src/*"]
+      "@astack/components/*": ["packages/components/src/*"],
+      "@astack/integrations": ["packages/integrations/src"],
+      "@astack/integrations/*": ["packages/integrations/src/*"]
     }
   },
   "exclude": ["**/dist", "**/node_modules"]
