--- a/examples/agent-with-tools/tsconfig.json
+++ b/examples/agent-with-tools/tsconfig.json
@@ -1,19 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "declaration": true,
-    "sourceMap": true,
-    "declarationMap": true,
-    "resolveJsonModule": true,
+    "rootDir": "../..",
     "outDir": "dist",
-    "rootDir": ".",
-    "baseUrl": ".",
+    "baseUrl": "../..",
     "paths": {
       "@astack/core": ["packages/core/src"],
       "@astack/core/*": ["packages/core/src/*"],
@@ -25,5 +15,5 @@
       "@astack/tools/*": ["packages/tools/src/*"]
     }
   },
-  "exclude": ["**/dist", "**/node_modules"]
+  "include": ["./**/*.ts"]
 }
