--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@astack/components",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.0",
   "description": "Components for the Astack AI Framework.",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
