chore: prepare for beta release

--- a/examples/simple-deep-research/tsconfig.json
+++ b/examples/simple-deep-research/tsconfig.json
@@ -5,12 +5,12 @@
     "outDir": "dist",
     "baseUrl": "../..",
     "paths": {
-      "@astack/core": ["packages/core/src"],
-      "@astack/core/*": ["packages/core/src/*"],
-      "@astack/components": ["packages/components/src"],
-      "@astack/components/*": ["packages/components/src/*"],
-      "@astack/integrations": ["packages/integrations/src"],
-      "@astack/integrations/*": ["packages/integrations/src/*"]
+      "@astack-tech/core": ["packages/core/src"],
+      "@astack-tech/core/*": ["packages/core/src/*"],
+      "@astack-tech/components": ["packages/components/src"],
+      "@astack-tech/components/*": ["packages/components/src/*"],
+      "@astack-tech/integrations": ["packages/integrations/src"],
+      "@astack-tech/integrations/*": ["packages/integrations/src/*"]
     }
   },
   "include": ["./**/*.ts"]
