--- a/examples/agent-with-tools/package.json
+++ b/examples/agent-with-tools/package.json
@@ -8,10 +8,10 @@
     "start": "tsx index.ts"
   },
   "dependencies": {
-    "@astack/components": "workspace:*",
-    "@astack/core": "workspace:*",
-    "@astack/integrations": "workspace:*",
-    "@astack/tools": "workspace:*"
+    "@astack-tech/components": "workspace:*",
+    "@astack-tech/core": "workspace:*",
+    "@astack-tech/integrations": "workspace:*",
+    "@astack-tech/tools": "workspace:*"
   },
   "devDependencies": {
     "tsx": "^4.7.0"
