--- a/examples/agent-with-tools/tsconfig.json
+++ b/examples/agent-with-tools/tsconfig.json
@@ -5,14 +5,14 @@
     "outDir": "dist",
     "baseUrl": "../..",
     "paths": {
-      "@astack/core": ["packages/core/src"],
-      "@astack/core/*": ["packages/core/src/*"],
-      "@astack/components": ["packages/components/src"],
-      "@astack/components/*": ["packages/components/src/*"],
-      "@astack/integrations": ["packages/integrations/src"],
-      "@astack/integrations/*": ["packages/integrations/src/*"],
-      "@astack/tools": ["packages/tools/src"],
-      "@astack/tools/*": ["packages/tools/src/*"]
+      "@astack-tech/core": ["packages/core/src"],
+      "@astack-tech/core/*": ["packages/core/src/*"],
+      "@astack-tech/components": ["packages/components/src"],
+      "@astack-tech/components/*": ["packages/components/src/*"],
+      "@astack-tech/integrations": ["packages/integrations/src"],
+      "@astack-tech/integrations/*": ["packages/integrations/src/*"],
+      "@astack-tech/tools": ["packages/tools/src"],
+      "@astack-tech/tools/*": ["packages/tools/src/*"]
     }
   },
   "include": ["./**/*.ts"]
