--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,14 +15,14 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@astack/core": ["packages/core/src"],
-      "@astack/core/*": ["packages/core/src/*"],
-      "@astack/components": ["packages/components/src"],
-      "@astack/components/*": ["packages/components/src/*"],
-      "@astack/integrations": ["packages/integrations/src"],
-      "@astack/integrations/*": ["packages/integrations/src/*"],
-      "@astack/tools": ["packages/tools/src"],
-      "@astack/tools/*": ["packages/tools/src/*"]
+      "@astack-tech/core": ["packages/core/src"],
+      "@astack-tech/core/*": ["packages/core/src/*"],
+      "@astack-tech/components": ["packages/components/src"],
+      "@astack-tech/components/*": ["packages/components/src/*"],
+      "@astack-tech/integrations": ["packages/integrations/src"],
+      "@astack-tech/integrations/*": ["packages/integrations/src/*"],
+      "@astack-tech/tools": ["packages/tools/src"],
+      "@astack-tech/tools/*": ["packages/tools/src/*"]
     }
   },
   "exclude": ["**/dist", "**/node_modules"]
