feat: 🎉 support serve astack pipeline or standalone component & streaming agent

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,5 @@ packages:
   - "apps/*"
   - "packages/*"
   - "examples/*"
+  - "examples/serve-astack/backend"
+  - "examples/serve-astack/frontend"
