feat: optimize ui & streaming config

--- a/examples/serve-astack/backend/.env.example
+++ b/examples/serve-astack/backend/.env.example
@@ -31,3 +31,19 @@ TEXT_AGENT_TEMPERATURE=0.7
 
 # 普通聊天温度参数（0-1）
 CHAT_TEMPERATURE=0.7
+
+# ===== 流式性能优化配置 =====
+# LLM 最大 token 数量
+LLM_MAX_TOKENS=2048
+
+# 流式传输延迟（毫秒）
+# 0 = 无延迟（最快）
+# 1-5 = 几乎无感知延迟
+# 10-20 = 自然打字感觉
+# 50+ = 慢速演示效果
+STREAMING_DELAY_MS=0
+
+# 流式传输模式
+# true = 按字符流式（更细腻但性能稍差）
+# false = 按词语流式（推荐，性能更好）
+STREAM_BY_CHARACTER=false
