--- a/examples/serve-astack/frontend/package.json
+++ b/examples/serve-astack/frontend/package.json
@@ -13,12 +13,17 @@
     "@ai-sdk/react": "^1.0.18",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.263.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "shiki": "^3.13.0",
     "streamdown": "^1.3.0"
   },
