--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   ],
   "author": "xiaoa",
   "license": "MIT",
-  "packageManager": "pnpm@10.18.1",
+  "packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@types/node": "^20.11.5",
