--- a/website/turbo.json
+++ b/website/turbo.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://turborepo.com/schema.json",
-  "extends": ["//"],
   "tasks": {
     "build": {
       "outputs": [".next/**", "!.next/cache/**"]
@@ -11,6 +10,10 @@
     },
     "lint": {
       "outputs": []
+    },
+    "start": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
