--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "prettier": "^3.1.1",
+    "sharp": "^0.34.5",
     "turbo": "^2.5.3",
     "typescript": "^5.8.3"
   }
