--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,6 +65,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@hlang-org/runtime": "^1.0.5"
+    "@hlang-org/runtime": "^1.0.5",
+    "rxjs": "^7.8.2"
   }
 }
